--- a/index.html
+++ b/index.html
@@ -10,3 +10,16 @@
   <h1> Natural Remedies </h1>
 </body>
 </html>
+<!-- Hello there! -->
+
+<!--
+<p>created by JRendolic</p>
+-->
+<h1>Big heading</h1>
+<p>It may be hard to imagine, but in the days before prescription medications, people turned to natural remedies to treat conditions such as infections and toothaches. Currently, about 4 out of 10 adults still turn to alternative therapies and the like, including herbal supplements, to treat what ails them.</p>
+<h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<p>This is a longer paragraph. It
+can include multiple sentences and
+ span many lines.</p>
