--- a/index.html
+++ b/index.html
@@ -26,3 +26,13 @@
     <li>Second item</li>
     <li>Third item</li>
 </ol>
+<ol>
+  <li>First parent item
+    <ul>
+      <li>First child item</li>
+      <li>Second child item</li>
+    </ul>
+  </li>
+  <li>Second parent item</li>
+  <li>Third parent item</li>
+</ol>
