--- a/index.html
+++ b/index.html
@@ -36,3 +36,16 @@
   <li>Second parent item</li>
   <li>Third parent item</li>
 </ol>
+<section>
+  <h2>Favourite colours</h2>
+  <ol>
+  </ol>
+</section>
+<section>
+  <h2>Favourite colours</h2>
+  <ol>
+    <li>Red</li>
+    <li>Blue</li>
+    <li>Green</li>
+  </ol>
+</section>
