--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
   <li>Third parent item</li>
 </ol>
 <section>
-  <h2>Favourite colours</h2>
+  <h2>Favourite seasons</h2>
   <ol>
+    <li>Winter</li>
+    <li>Summer</li>
+    <li>spring</li>
   </ol>
 </section>
-<section>
-  <h2>Favourite colours</h2>
-  <ol>
-    <li>Red</li>
-    <li>Blue</li>
-    <li>Green</li>
-  </ol>
-</section>
+<ul>
+  <li>California</li>
+  <li>Oregan</li>
+  <li>Montana</li>
+</ul>
