flower patch and hyperlink
flower patch  picture added and hyperlink

--- a/index.html
+++ b/index.html
@@ -49,3 +49,9 @@
   <li>Oregan</li>
   <li>Montana</li>
 </ul>
+<img src="images/flowerpatch.jpg"
+  alt="flower patch" />
+
+  <a href="#" target="_blank">
+  Click me
+</a>
