--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <img src="images/flowerpatch.jpg"
   alt="flower patch" />
 
+  <a href="page.html">https://www.mdlinx.com/article/7-clinically-proven-natural-remedies/lfc-3813</a>
   <a href="#" target="_blank">
   Click me
 </a>
