--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <h1> Natural Remedies </h1>
-</body>
-</html>
+
 <!-- Hello there! -->
 
 <!--
@@ -50,9 +49,8 @@
   <li>Montana</li>
 </ul>
 <img src="images/flowerpatch.jpg"
-  alt="flower patch" />
+  alt="flower patch" >
 
-  <a href="page.html">https://www.mdlinx.com/article/7-clinically-proven-natural-remedies/lfc-3813</a>
-  <a href="#" target="_blank">
-  Click me
-</a>
+  <a href="https://www.mdlinx.com/article/7-clinically-proven-natural-remedies/lfc-3813"> Natural Remedies </a>
+</body>
+</html>
