--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <li>Oregan</li>
   <li>Montana</li>
 </ul>
-<img src="images/flowerpatch.jpg"
+<img src="Images/flowerpatch.jpg"
   alt="flower patch" >
 
   <a href="https://www.mdlinx.com/article/7-clinically-proven-natural-remedies/lfc-3813"> Natural Remedies </a>
