--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 </ul>
 <img src="Images/flowerpatch.jpg"
   alt="flower patch" >
+  <a href="http://www.xaxlip.ca"
+  target="_blank">
+</a>
 
   <a href="https://www.mdlinx.com/article/7-clinically-proven-natural-remedies/lfc-3813"> Natural Remedies </a>
 </body>
