--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
   <a href="http://www.xaxlip.ca"
   target="_blank">
 </a>
-
+<footer id="footer">
+  <a href="#footer">Footer</a>
   <a href="https://www.mdlinx.com/article/7-clinically-proven-natural-remedies/lfc-3813"> Natural Remedies </a>
 </body>
 </html>
