--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 <img src="Images/flowerpatch.jpg"
   alt="flower patch" >
   <a href="http://www.xaxlip.ca"
-  target="_blank">
+  target="_blank
+  <a name="top"></a>
+  <a href="#top">link to top</a>
 </a>
 <footer id="footer">
   <a href="#footer">Footer</a>
