--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <a name="top"></a>
   <a href="#top">link to top</a>
 </a>
+  <a href="https://www.xaxlip.ca"> Home </a>
 
   <a href="https://www.mdlinx.com/article/7-clinically-proven-natural-remedies/lfc-3813"> Natural Remedies </a>
 </body>
