--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@
   <a href="https://www.xaxlip.ca"> Home </a>
 
   <a href="https://www.mdlinx.com/article/7-clinically-proven-natural-remedies/lfc-3813"> Natural Remedies </a>
+  <link rel="stylesheet"
+    href="style.css">
 </body>
 </html>
