--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <img src="Images/flowerpatch.jpg"
   alt="flower patch" >
 
-  <a href="http://www.xaxlip.ca"
+<a href=“http://www.xaxlip.ca” target=“_blank”></a>
   target="_blank
   <a name="top"></a>
   <a href="#top">link to top</a>
