--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet"
       href="style.css">
+      <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1> Natural Remedies </h1>
@@ -17,7 +18,7 @@
 <p>created by JRendolic</p>
 -->
   <h1>Big heading</h1>
-    <p>It may be hard to imagine, but in the days before prescription medications, people turned to natural remedies to treat conditions such as infections and toothaches. Currently, about 4 out of 10 adults still turn to alternative therapies and the like, including herbal supplements, to treat what ails them.</p>
+    <p>It may be<em> hard</em> to imagine, but in the days before prescription medications, people turned to <strong> natural remedies</strong>  to treat conditions such as infections and toothaches. Currently, about 4 out of 10 adults still turn to alternative therapies and the like, including herbal supplements, to treat what ails them.</p>
       <h1>Heading 1</h1>
       <h2>Heading 2</h2>
       <h3>Heading 3</h3>
@@ -54,7 +55,6 @@
   alt="flower patch" >
 
 <a href=“http://www.xaxlip.ca” target=“_blank”></a>
-  target="_blank
   <a name="top"></a>
   <a href="#top">link to top</a>
 </a>
