--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  <div class="about">
+    <h2>about</h2>
+        <p>This is our website.</p>
+</div>
 
 <head>
-    <title>JRendolic</title>
+  <title>JRendolic</title>
     <meta charset="utf-8">
     <link rel="stylesheet"
       href="style.css">
-      <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1> Natural Remedies </h1>
-
-<!-- Hello there! -->
-
-<!--
-<p>created by JRendolic</p>
--->
   <h1>Big heading</h1>
     <p>It may be<em> hard</em> to imagine, but in the days before prescription medications, people turned to <strong> natural remedies</strong>  to treat conditions such as infections and toothaches. Currently, about 4 out of 10 adults still turn to alternative therapies and the like, including herbal supplements, to treat what ails them.</p>
       <h1>Heading 1</h1>
@@ -51,6 +48,15 @@
   <li>Oregan</li>
   <li>Montana</li>
 </ul>
+section {
+  width: 50%;
+  height: 50%;
+}
+
+img {
+  width: 300px;
+  height: 200px;
+}
 <img src="Images/flowerpatch.jpg"
   alt="flower patch" >
 
