--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <div class="about">
-    <h2>about</h2>
-        <p>This is our website.</p>
+    <h2>JRendolic Homeopathic Remedies</h2>
+        <p>1101 Ohin Road
+          Shalalth, BC (778-209-3354).</p> 
 </div>
 
 <head>
@@ -12,19 +13,18 @@
       href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <h1> Natural Remedies </h1>
-  <h1>Big heading</h1>
+  <h1>For Better Health </h1>
     <p>It may be<em> hard</em> to imagine, but in the days before prescription medications, people turned to <strong> natural remedies</strong>  to treat conditions such as infections and toothaches. Currently, about 4 out of 10 adults still turn to alternative therapies and the like, including herbal supplements, to treat what ails them.</p>
-      <h1>Heading 1</h1>
-      <h2>Heading 2</h2>
-      <h3>Heading 3</h3>
-        <p>This is a longer paragraph. Itm can include multiple sentences and span many lines.</p>
- <ol>
-    <li>First item</li>
-    <li>Second item</li>
-    <li>Third item</li>
-</ol>
+
+      <h2>Cinically Proven Remedies</h2>
+      <h3>Peppermint</h3>
+        <p>According to results from a large meta-analysis published in BMC Complementary and Alternative Medicine,peppermint oil vs placebo is effective in treating global complaints of IBS, such as abdominal pain. Furthermore, peppermint oil posed no negative side effects.</p>
+
+        <h4>Calamine lotion</h4>
+          <p>Calamine lotion is a mineral mix of zinc and ferric oxide used in lotions, liniments, and ointments to soothe the itching, pain, and discomfort of minor skin irritations.</p>
 <ol>
   <li>First parent item
     <ul>
@@ -35,6 +35,7 @@
   <li>Second parent item</li>
   <li>Third parent item</li>
 </ol>
+
 <section>
   <h2>Favourite seasons</h2>
   <ol>
@@ -48,15 +49,8 @@
   <li>Oregan</li>
   <li>Montana</li>
 </ul>
-section {
-  width: 50%;
-  height: 50%;
-}
+s
 
-img {
-  width: 300px;
-  height: 200px;
-}
 <img src="Images/flowerpatch.jpg"
   alt="flower patch" >
 
