--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <div class="about">
     <h2>JRendolic Homeopathic Remedies</h2>
         <p>1101 Ohin Road
-          Shalalth, BC (778-209-3354).</p> 
+          Shalalth, BC (778-209-3354).</p>
 </div>
 
 <head>
@@ -25,6 +25,9 @@
 
         <h4>Calamine lotion</h4>
           <p>Calamine lotion is a mineral mix of zinc and ferric oxide used in lotions, liniments, and ointments to soothe the itching, pain, and discomfort of minor skin irritations.</p>
+
+          <h5>Echinacea</h5>
+            <p>Echinacea is derived from the roots of coneflowers. For some time, experts have been interested in the immune effects of this natural supplement. In a meta-analysis published in Advances in Medicine, echinacea extract was found to decrease the risk of recurrent respiratory infections and complications, such as pneumonia, ear infection, and tonsillitis.</p>
 <ol>
   <li>First parent item
     <ul>
