--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
           Shalalth, BC (778-209-3354).</p>
 </div>
 
+<div class="box">
+  <h1> Natural Remedies </h1>
+  <h1>For Better Health </h1>
+</div>
+
 <head>
   <title>JRendolic</title>
     <meta charset="utf-8">
@@ -15,55 +20,51 @@
 </head>
 
 <body>
-  <h1> Natural Remedies </h1>
-  <h1>For Better Health </h1>
+
     <p>It may be<em> hard</em> to imagine, but in the days before prescription medications, people turned to <strong> natural remedies</strong>  to treat conditions such as infections and toothaches. Currently, about 4 out of 10 adults still turn to alternative therapies and the like, including herbal supplements, to treat what ails them.</p>
 
-      <h2>Cinically Proven Remedies</h2>
-      <h3>Peppermint</h3>
+  <h2>Cinically Proven Remedies</h2>
+
+  <h3>Peppermint</h3>
         <p>According to results from a large meta-analysis published in BMC Complementary and Alternative Medicine,peppermint oil vs placebo is effective in treating global complaints of IBS, such as abdominal pain. Furthermore, peppermint oil posed no negative side effects.</p>
 
-        <h4>Calamine lotion</h4>
+  <h4>Calamine lotion</h4>
           <p>Calamine lotion is a mineral mix of zinc and ferric oxide used in lotions, liniments, and ointments to soothe the itching, pain, and discomfort of minor skin irritations.</p>
 
-          <h5>Echinacea</h5>
+  <h5>Echinacea</h5>
             <p>Echinacea is derived from the roots of coneflowers. For some time, experts have been interested in the immune effects of this natural supplement. In a meta-analysis published in Advances in Medicine, echinacea extract was found to decrease the risk of recurrent respiratory infections and complications, such as pneumonia, ear infection, and tonsillitis.</p>
-<ol>
-  <li>First parent item
-    <ul>
-      <li>First child item</li>
-      <li>Second child item</li>
-    </ul>
-  </li>
-  <li>Second parent item</li>
-  <li>Third parent item</li>
-</ol>
 
 <section>
-  <h2>Favourite seasons</h2>
+  <h2>Skin / Acne Tips</h2>
   <ol>
-    <li>Winter</li>
-    <li>Summer</li>
-    <li>spring</li>
+    <li>Change Makeup and read lablels</li>
+    <li>Attack Blackheads</li>
+    <li>Stay out of the Sun</li>
   </ol>
 </section>
-<ul>
-  <li>California</li>
-  <li>Oregan</li>
-  <li>Montana</li>
-</ul>
+
 s
 
 <img src="Images/flowerpatch.jpg"
   alt="flower patch" >
+  <ul>
+    <li><a href="#top">link to top</a></li>
+    <li><a href="https://www.xaxlip.ca"> Home </a></li>
+      <li>  <a href="https://www.mdlinx.com/article/7-clinically-proven-natural-remedies/lfc-3813"> Natural Remedies </a>
+  </ul>
 
-<a href=“http://www.xaxlip.ca” target=“_blank”></a>
-  <a name="top"></a>
-  <a href="#top">link to top</a>
-</a>
-  <a href="https://www.xaxlip.ca"> Home </a>
 
-  <a href="https://www.mdlinx.com/article/7-clinically-proven-natural-remedies/lfc-3813"> Natural Remedies </a>
+<div class="container">
+
+  <section>
+    <h1>Container 1</h1>
+  </section>
+
+  <section>
+    <h1>Container 2</h1>
+  </section>
+
+</div>
 
 </body>
 </html>
