--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet"
       href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -26,13 +26,28 @@
   <h2>Cinically Proven Remedies</h2>
 
   <h3>Peppermint</h3>
-        <p>According to results from a large meta-analysis published in BMC Complementary and Alternative Medicine,peppermint oil vs placebo is effective in treating global complaints of IBS, such as abdominal pain. Furthermore, peppermint oil posed no negative side effects.</p>
+        <p>  <ol>
+            <li>Boil 2 cups of water</li>
+            <li>Add 15 to 20 fresh mint leaves</li>
+            <li>steep 10 to 15 minutes or until desired strength is achieved.</li>
+            <li>Strain leaves (or chew them if you don't mind the texture and they are small) and serve warm with a drizzle of honey and squeeze of lemon.</li>
+          </ol>
+
+<p>According to results from a large meta-analysis published in BMC Complementary and Alternative Medicine,peppermint oil vs placebo is effective in treating global complaints of IBS, such as abdominal pain. Furthermore, peppermint oil posed no negative side effects.</p>
 
   <h4>Calamine lotion</h4>
           <p>Calamine lotion is a mineral mix of zinc and ferric oxide used in lotions, liniments, and ointments to soothe the itching, pain, and discomfort of minor skin irritations.</p>
 
   <h5>Echinacea</h5>
-            <p>Echinacea is derived from the roots of coneflowers. For some time, experts have been interested in the immune effects of this natural supplement. In a meta-analysis published in Advances in Medicine, echinacea extract was found to decrease the risk of recurrent respiratory infections and complications, such as pneumonia, ear infection, and tonsillitis.</p>
+            <p> There is no recommended daily allowance of echinacea. It is sold in capsules, tinctures, and teas.Echinacea is derived from the roots of coneflowers. For some time, experts have been interested in the immune effects of this natural supplement.
+              You can purchase loose leaf echinacea tea or tea bags online and in many health food stores. To prepare loose leaf echinacea tea:
+          <ol>
+                <li>Place flowers, leaves, and roots of an echinacea plant in a teacup. Be sure that the plant parts are free of dirt. </li>
+                <li>Bring water to a boil and then let sit for a minute to reduce the temperature just slightly. </li>
+                <li>Pour 8 ounces of water over the plant parts.</li>
+                <li>Strain to remove the flowers, roots, and leaves.</li>
+                <li>Flavor to taste before drinking.</li>
+   In a meta-analysis published in Advances in Medicine, echinacea extract was found to decrease the risk of recurrent respiratory infections and complications, such as pneumonia, ear infection, and tonsillitis.</p>
 
 <section>
   <h2>Skin / Acne Tips</h2>
@@ -42,8 +57,6 @@
     <li>Stay out of the Sun</li>
   </ol>
 </section>
-
-s
 
 <img src="Images/flowerpatch.jpg"
   alt="flower patch" >
