--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 <div class="container">
 
   <section>
-    <h1>Container 1</h1>
+    <h1>Drink Lots of Fluids</h1>
   </section>
 
   <section>
-    <h1>Container 2</h1>
+    <h1>Exercise to Build Bone</h1>
   </section>
 
 </div>
